SVN
-------------------------------

XML:   Resolved issue CASTOR-1931 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with enum bindings for interger-based enumerations.
       Details: http://jira.codehaus.org/browse/CASTOR-1931
       (Werner - 20070403)

XML:   Resolved issue CASTOR-1928 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with not-specified binding file during automatic naming collision resolution.
       Details: http://jira.codehaus.org/browse/CASTOR-1928
       (Werner - 20070401)

XML:   Resolved issue CASTOR-238 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for 'overriding' the name of the Java 'content' member.
       Details: http://jira.codehaus.org/browse/CASTOR-238
       (Werner - 20070401)

XML:   Resolved issue CASTOR-423 using contribution from Johan Lindquist [johan@kawoo.co.uk]
       Added support for <xs:hexBinary>; for XML code generation and support for
       HEX en-/decoding during (un)marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-423
       (Werner - 20070401)

XML:   Resolved issue CASTOR-1926 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Renamed XMLClassDescriptorResolver.resolveXML(Class) back to resolve(Class).
       Details: http://jira.codehaus.org/browse/CASTOR-1926
       (Werner - 20070331)

XML:   Resolved issue CASTOR-1925 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed syntax of closing <forces> tag in JClassRegistry.printSummary().
       Details: http://jira.codehaus.org/browse/CASTOR-1925
       (Werner - 20070330)

XML:   Resolved issue CASTOR-1891 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with using enum types as constructor arguments
       Details: http://jira.codehaus.org/browse/CASTOR-1891
       (Werner - 20070319)
