@@ -94,6 +94,26 @@ org.exolab.castor.builder.automaticConflictResolution=true</code-panel>
 
             </summary>
             <bugs>
+                <bug id="1936" tool="jira">
+                    <description>
+                        Made XPathLocation implement java.io.Serializable.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Dan Smith</name>
+                        <email>upthewaterspout@yahoo.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>Gen</module>
+                    <date>20070404</date>
+                </bug>
                 <bug id="1931" tool="jira">
                     <description>
                         Fixed problem with enum bindings for interger-based enumerations.
