@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1936 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Made XPathLocation implement java.io.Serializable.
+       Details: http://jira.codehaus.org/browse/CASTOR-1936
+       (Werner - 20070404)
+
 XML:   Resolved issue CASTOR-1931 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem with enum bindings for interger-based enumerations.
        Details: http://jira.codehaus.org/browse/CASTOR-1931
